Contact email + feedback form fixes

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     <div class="card">
       <h2>Contact</h2>
       <p>
-        Questions, suggestions, or corrections: <a href="mailto:support@cheetahwaec.com">support@cheetahwaec.com</a>.
+        Questions, suggestions, or corrections: <a href="mailto:cheetahwaec@gmail.com">cheetahwaec@gmail.com</a>.
       </p>
     </div>
   </main>
