--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,8 @@
 
     /* Feedback (only visible when logged in) */
     .fb-wrap { margin-top: 14px; padding-top: 14px; border-top: 1px solid #eee; text-align: left; }
+    .fb-wrap h3 { margin: 16px 0 8px 0; font-size: 22px; }
+    .fb-wrap label { display: block; font-weight: 700; margin: 12px 0 6px 0; }
     .fb-muted { color: #555; font-size: 14px; margin-top: 6px; }
     .fb-danger { color: #8a1a1a; }
     .fb-row { display: flex; gap: 12px; align-items: center; margin-top: 10px; }
@@ -124,7 +126,7 @@
       line-height: 1.4;
     }
 
-    .fb-textarea { min-height: 120px; resize: vertical; }
+    .fb-textarea { min-height: 120px; resize: vertical; display: block; }
   </style>
 </head>
 <body>
@@ -170,9 +172,9 @@
       <h2>Contact Us</h2>
       <ul class="link-list">
         <li>
-          <a href="mailto:support@cheetahwaec.com">
+          <a href="mailto:cheetahwaec@gmail.com">
             <span class="icon">✉</span>
-            support@cheetahwaec.com
+            cheetahwaec@gmail.com
           </a>
         </li>
         <li>
