--- a/terms.html
+++ b/terms.html
@@ -144,7 +144,7 @@
     <div class="card">
       <h2>Contact</h2>
       <p>
-        Questions about these Terms? Email <a href="mailto:support@cheetahwaec.com" style="color:#111;">support@cheetahwaec.com</a>.
+        Questions about these Terms? Email <a href="mailto:cheetahwaec@gmail.com" style="color:#111;">cheetahwaec@gmail.com</a>.
       </p>
     </div>
   </main>
