--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -152,7 +152,7 @@
     <div class="card">
       <h2>Contact</h2>
       <p>
-        Questions about this policy? Email us at <a href="mailto:support@cheetahwaec.com" style="color:#111;">support@cheetahwaec.com</a>.
+        Questions about this policy? Email us at <a href="mailto:cheetahwaec@gmail.com" style="color:#111;">cheetahwaec@gmail.com</a>.
       </p>
     </div>
   </main>
