Contact feedback: prevent double init + bust cache

--- a/contact.html
+++ b/contact.html
@@ -200,7 +200,7 @@
 
   </main>
 
-  <script type="module" src="assets/contactFeedback.js"></script>
+  <script type="module" src="assets/contactFeedback.js?v=20260206"></script>
   <footer>
     <p style="margin: 10px 0 6px 0;">
       <a href="/about" style="color:#fff; text-decoration: none;">About</a> |
