Nav: label contact link as Contacts

--- a/contact.html
+++ b/contact.html
@@ -144,7 +144,7 @@
         <li><a href="/study-guide">Study Guide</a></li>
         <li><a href="/past-papers">Past Papers</a></li>
         <li><a href="/practice">Practice</a></li>
-        <li><a href="/contact">Contact Us</a></li>
+        <li><a href="/contact">Contacts</a></li>
         <li><a href="/subscribe" class="subscribe-btn">Become a donor</a></li>
       </ul>
     </div>
@@ -173,13 +173,13 @@
       <ul class="link-list">
         <li>
           <a href="mailto:cheetahwaec@gmail.com">
-            <span class="icon">✉</span>
+            <span class="icon">âœ‰</span>
             cheetahwaec@gmail.com
           </a>
         </li>
         <li>
           <a href="https://www.reddit.com/r/CheetahWAEC/" target="_blank" rel="noopener">
-            <span class="icon">◯</span>
+            <span class="icon">â—¯</span>
             Reddit: r/CheetahWAEC
           </a>
         </li>
@@ -191,10 +191,10 @@
     <div class="card">
       <h2>Follow Us Online</h2>
       <ul class="link-list">
-        <li><a href="https://www.tiktok.com/@cheetahwaec" target="_blank" rel="noopener"><span class="icon">♪</span>TikTok: @cheetahwaec</a></li>
-        <li><a href="https://www.instagram.com/cheetahwaec" target="_blank" rel="noopener"><span class="icon">◎</span>Instagram: @cheetahwaec</a></li>
+        <li><a href="https://www.tiktok.com/@cheetahwaec" target="_blank" rel="noopener"><span class="icon">â™ª</span>TikTok: @cheetahwaec</a></li>
+        <li><a href="https://www.instagram.com/cheetahwaec" target="_blank" rel="noopener"><span class="icon">â—Ž</span>Instagram: @cheetahwaec</a></li>
         <li><a href="https://m.facebook.com/61575094883653/" target="_blank" rel="noopener"><span class="icon">f</span>Facebook: @cheetahwaec</a></li>
-        <li><a href="https://chat.whatsapp.com/H0apT6YvvvMGonRP0lkpa1" target="_blank" rel="noopener"><span class="icon">⟐</span>WhatsApp Chat</a></li>
+        <li><a href="https://chat.whatsapp.com/H0apT6YvvvMGonRP0lkpa1" target="_blank" rel="noopener"><span class="icon">âŸ</span>WhatsApp Chat</a></li>
       </ul>
     </div>
 
