--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
@@ -122,7 +122,7 @@
         <li><a href="/study-guide">Study Guide</a></li>
         <li><a href="/past-papers">Past Papers</a></li>
         <li><a href="/practice">Practice</a></li>
-        <li><a href="/contact">Contact Us</a></li>
+        <li><a href="/contact">Contacts</a></li>
         <li><a href="/subscribe" class="subscribe-btn">Become a donor</a></li>
       </ul>
     </div>
