Contact: fix encoding icons

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-1CQNXCWHX7"></script>
   <script>
@@ -10,9 +13,6 @@
 
     gtag('config', 'G-1CQNXCWHX7');
   </script>
-
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -173,13 +173,13 @@
       <ul class="link-list">
         <li>
           <a href="mailto:cheetahwaec@gmail.com">
-            <span class="icon">âœ‰</span>
+            <span class="icon">&#9993;</span>
             cheetahwaec@gmail.com
           </a>
         </li>
         <li>
           <a href="https://www.reddit.com/r/CheetahWAEC/" target="_blank" rel="noopener">
-            <span class="icon">â—¯</span>
+            <span class="icon">&#9711;</span>
             Reddit: r/CheetahWAEC
           </a>
         </li>
@@ -191,10 +191,10 @@
     <div class="card">
       <h2>Follow Us Online</h2>
       <ul class="link-list">
-        <li><a href="https://www.tiktok.com/@cheetahwaec" target="_blank" rel="noopener"><span class="icon">â™ª</span>TikTok: @cheetahwaec</a></li>
-        <li><a href="https://www.instagram.com/cheetahwaec" target="_blank" rel="noopener"><span class="icon">â—Ž</span>Instagram: @cheetahwaec</a></li>
+        <li><a href="https://www.tiktok.com/@cheetahwaec" target="_blank" rel="noopener"><span class="icon">&#9834;</span>TikTok: @cheetahwaec</a></li>
+        <li><a href="https://www.instagram.com/cheetahwaec" target="_blank" rel="noopener"><span class="icon">&#9678;</span>Instagram: @cheetahwaec</a></li>
         <li><a href="https://m.facebook.com/61575094883653/" target="_blank" rel="noopener"><span class="icon">f</span>Facebook: @cheetahwaec</a></li>
-        <li><a href="https://chat.whatsapp.com/H0apT6YvvvMGonRP0lkpa1" target="_blank" rel="noopener"><span class="icon">âŸ</span>WhatsApp Chat</a></li>
+        <li><a href="https://chat.whatsapp.com/H0apT6YvvvMGonRP0lkpa1" target="_blank" rel="noopener"><span class="icon">&#10192;</span>WhatsApp Chat</a></li>
       </ul>
     </div>
 
