--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
     h1 { margin: 0 0 8px 0; font-size: 34px; }
     .muted { color: #555; }
     h2 { margin-top: 22px; font-size: 22px; }
-    p, li { font-size: 16px; line-height: 1.7; color: #222; }
+    .wrap p, .wrap li { font-size: 16px; line-height: 1.7; color: #222; }
     ul { margin: 10px 0 0 18px; }
-    a { color: #111; }
+    .wrap a { color: #111; }
   </style>
 </head>
 <body>
